# biying

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: MainPage.qml  SettingPage.qml  WallpaperFlow.qml  main.qml
assets/i18n/: base.ts  zh_CN.qm  zh_CN.ts
linuxdeployqt.AppDir/: biying.desktop
src/: async_utils.rs  config.rs  implementation.rs  jemalloc.rs  listmodel.rs  main.rs  systray.rs
