[package]
name = "biying"
version = "1.1.0"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
cstr = "0.1"
cpp = "0.5"
qmetaobject = "0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
reqwest = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.6"
regex = "1.1"
lazy_static = "1.3"
ksni = "0.0"
image = "0.21"

[build-dependencies]
cpp_build = "0.5"
