[package]
name = "biying"
version = "1.1.1"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
cstr = "0.2"
cpp = "0.5"
qmetaobject = { version = "0.1", git = "https://github.com/woboq/qmetaobject-rs.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
reqwest = { version = "0.10", features = ["json", "gzip"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7", features = ["small_rng"] }
regex = "1.4"
lazy_static = "1.3"
ksni = "0.1"
image = "0.23"
futures = "0.3"
tokio = { version = "0.2", features = ["fs", "rt-core"] }

[build-dependencies]
cpp_build = "0.5"
